<resources>
    <string name="app_name">Lickety Split</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_friends">FriendsActivity</string>


    <string name="title_activity_account">AccountActivity</string>
    <string name="owed"><b>owed: </b></string>
    <string name="debt"><b>owe: </b></string>
    <string name="friends"><i>friends: </i></string>


    <string name="title_activity_base">BaseActivity</string>
    <string name="username"><b>username</b></string>
    <string name="location"><b>location: </b></string>
    <string name="title_activity_nav_drawer">Lickety Split</string>

    <string name="title">Title</string>
    <string name="name"><b>Name</b></string>
    <string name="you_owe"><b>You owe: </b></string>
    <string name="you_re_owed"><b>You\'re owed: </b></string>
    <string name="budapest">Budapest</string>
    <string name="user_created">User created</string>
    <string name="choose_icon">Choose icon</string>
    <string name="required">Required</string>
    <string name="at">\@</string>
    <string name="your_transactions">Your Transactions</string>
    <string name="summary">Summary</string>
    <string name="empty" />
    <string name="cv_transaction_click_error">Activity does not implement CanRespondToCVTransactionClick interface</string>
    <string name="add_transaction_frag_ans_error">Not implementing addTransactionFragmentAnswer</string>
    <string name="add_a_transaction">Add a transaction</string>
    <string name="food">Food</string>
    <string name="drink">Drinks</string>
    <string name="rent">Rent</string>
    <string name="travel">Travel</string>
    <string name="other">Other</string>
    <string name="add_transaction">Add transaction</string>
    <string name="save">Save</string>
    <string name="no_friends">You have no friends. \nGo to friends to add a friend</string>
    <string name="cancel">Cancel</string>
    <string name="add_amt_user_owes">Add amount this user owes</string>
    <string name="okay">Okay</string>
    <string name="transaction_created">Transaction created</string>
    <string name="friends_list_transaction_is_empty">Friends list in transaction is empty</string>
    <string name="transaction_edited">Transaction edited</string>
    <string name="paid">" Paid"</string>
    <string name="no_users_have_debt">No users were inputed as having debts</string>
    <string name="implement_on_frag_interaction_listener">" must implement OnFragmentInteractionListener"</string>
    <string name="about_text"><![CDATA[This app was created by Mo, Carolyn & Sam\n\nCreated for AIT Mobile Development\n\nFall 2016 Final Project]]></string>
    <string name="email">email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="friend_username">Friend\'s Username</string>
    <string name="transaction_name">Transaction Name</string>
    <string name="user_owe_question">How much does this user owe?</string>
    <string name="location_question">Where are you from?</string>
    <string name="you_owe_large">You Owe</string>
    <string name="youre_owed">You\'re Owed</string>
    <string name="zero_ft">0 Ft</string>
    <string name="buda_location">Budapest</string>
    <string name="friends_2">friends</string>
    <string name="change_password">change password</string>
    <string name="change_icon">change icon</string>
    <string name="logout">Logout</string>
    <string name="ft">&#160; Ft</string>
    <string name="zero">0</string>
    <string name="grid">grid</string>
    <string name="contact_us_message">Want to send us an email? \n\ncoorlyn@myson.edu</string>
    <string name="details">details</string>
    <string name="delete_button">Delete Button</string>
    <string name="edit_button">Edit Button</string>
    <string name="transactions">Transactions</string>
    <string name="friends_nav_drawer">Friends</string>
    <string name="user">User</string>
    <string name="communicate">Communicate</string>
    <string name="about">About</string>
    <string name="contact">Contact</string>
    <string name="noImplementFriendFragAns">Not implementing addFriendFragmentAnswer</string>
    <string name="addAFriend">Add a friend</string>
    <string name="addFriend">Add friend</string>
    <string name="friendAdded">Friend Added</string>
    <string name="mustImplOnFragInteraction">%1s must implement OnFragmentInteractionListener</string>
    <string name="userDoesNotExist">User %1s does not exist!</string>
    <string name="alreadyFriends">You are already friends with %1s!</string>
    <string name="chooseIcon">Choose icon</string>
    <string name="loading_message">Loading...</string>
    <string name="contact_us">Contact Us</string>
    <string name="flipOnlyHostsTwoChildren">FlipLayout can host only two direct children</string>
    <string name="alex">ALEX</string>
    <string name="cal">CAL</string>
    <string name="carolyn1">CAROLYN1</string>
    <string name="carolyn2">CAROLYN2</string>
    <string name="charlie">CHARLIE</string>
    <string name="dylan">DYLAN</string>
    <string name="sam">SAM</string>
    <string name="farida">FARIDA</string>
    <string name="keith">KEITH</string>
    <string name="mo">MO</string>
    <string name="nick">NICK</string>
    <string name="oscar">OSCAR</string>
    <string name="friendCounted">%1f friends</string>
    <string name="singleFriendCounted">%1f friend</string>
    <string name="owes">" owes "</string>

>>>>>>> origin/master
</resources>
