<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGreen">

    <LinearLayout
        android:id="@+id/activity_account"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F1FAEE"
        android:fadeScrollbars="true"
        android:orientation="vertical"
        android:weightSum="20"
        tools:context="hu.ait.android.mobilefinalproject.AccountActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle_background_account_top"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ivAccountIcon"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_weight="3"
                    android:clickable="true" />

                <TextView
                    android:id="@+id/tvUsername"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:gravity="center_horizontal"
                    android:text="@string/username"
                    android:textSize="30sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvUserMoneyOwed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/owed"
                        android:textSize="23sp" />


                    <TextView
                        android:id="@+id/tvUserMoneyOwedAmount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/zero"
                        android:textSize="23sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="23sp"
                        android:text="@string/ft"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvUserMoneyDebt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/debt"
                        android:textSize="23sp" />


                    <TextView
                        android:id="@+id/tvUserMoneyDebtAmount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/zero"
                        android:textSize="23sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="23sp"
                        android:text="@string/ft"/>

                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="2" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvUserLocationPrompt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/location"
                        android:textSize="23sp" />

                    <TextView
                        android:id="@+id/tvUserLocation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/buda_location"
                        android:textSize="23sp" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="2" />

                <TextView
                    android:id="@+id/tvUserFriendsAmount"
                    android:layout_width="300dp"
                    android:layout_height="0dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle_background_account_items"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/friends_2"
                    android:textSize="20sp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="2" />

                <TextView
                    android:id="@+id/tvEditPassword"
                    android:layout_width="300dp"
                    android:layout_height="0dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle_background_account_items"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/change_password"
                    android:textSize="20sp" />


                <TextView
                    android:id="@+id/tvEditIcon"
                    android:layout_width="300dp"
                    android:layout_height="0dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="6dp"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle_background_account_items"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/change_icon"
                    android:textSize="20sp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="2" />


                <TextView
                    android:id="@+id/tvLogout"
                    android:layout_width="300dp"
                    android:layout_height="0dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="12dp"
                    android:layout_weight="1"
                    android:background="@drawable/rectangle_background_account_items"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/logout"
                    android:textSize="20sp" />


            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</ScrollView>
