<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvTransaction"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:padding="5dp"
    app:cardBackgroundColor="@color/lightBlue"
    app:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/llOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/ivTransactionIcon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginLeft="2dp"
                android:background="@null"
                android:scaleType="fitXY"
                android:src="@drawable/dollar_black" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvTransactionName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details" />

            </LinearLayout>


        </LinearLayout>

        <ImageButton
            android:id="@+id/btnDelete"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:contentDescription="@string/delete_button"
            android:scaleType="fitXY"
            android:src="@drawable/ic_delete"
            android:visibility="visible" />

        <ImageButton
            android:id="@+id/btnEdit"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/btnDelete"
            android:layout_toStartOf="@+id/btnDelete"
            android:background="@null"
            android:contentDescription="@string/edit_button"
            android:scaleType="fitXY"
            android:src="@drawable/ic_edit"
            android:visibility="visible" />
    </RelativeLayout>

</android.support.v7.widget.CardView>
